--- a/frontend/src/assets/common.module.scss
+++ b/frontend/src/assets/common.module.scss
@@ -112,3 +112,30 @@
     z-index: 1;
   }
 }
+
+@mixin beveledFrameAvatar($bevelWidth, $frameWidth, $color, $background) {
+  &::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: $color;
+    @include beveledEdges($bevelWidth);
+    z-index: 0;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 3px;
+    bottom: 3px;
+    left: 3px;
+    right: 3px;
+    background: $background;
+    @include beveledEdges(calc($bevelWidth - $frameWidth / 2));
+    z-index: 0;
+  }
+
+  > * {
+    z-index: 1;
+  }
+}
